MGMT-20384: Feature flag for AMD GPU supported OCP versions
The AMD GPU operator was available in version 4.17 of OpenShift in the
certified operators catalog, but it isn't yet in that same catalog for
4.18. As a result when the operator is enabled for 4.18 the installation
will start but will never finish correctly because the operator will
never be installed. To avoid that this patch adds a new environment
variable to control for what versions of OpenShift the operator will be
enabled. For example, to explicitly enable both 4.17 and 4.18:

```shell
AMD_GPU_SUPPORTED_OPENSHIF_VERSION="4.17,4.18"
```

The default value for the variable is `*`, which means that the operator
is enabled for all versions of OpenShift.

The variable is set to `4.17` in the deployment template, so that in the
production environment the operator will only be enabled for OpenShift
4.17.

Related: https://issues.redhat.com/browse/MGMT-20384
Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -228,6 +228,8 @@ parameters:
   value: "10de"
 - name: AMD_SUPPORTED_GPUS
   value: "1002"
+- name: AMD_GPU_SUPPORTED_OPENSHIFT_VERSIONS
+  value: "4.17"
 apiVersion: v1
 kind: Template
 metadata:
@@ -508,6 +510,8 @@ objects:
                 value: ${NVIDIA_SUPPORTED_GPUS}
               - name: AMD_SUPPORTED_GPUS
                 value: ${AMD_SUPPORTED_GPUS}
+              - name: AMD_GPU_SUPPORTED_OPENSHIFT_VERSIONS
+                value: ${AMD_GPU_SUPPORTED_OPENSHIFT_VERSIONS}
             volumeMounts:
               - name: route53-creds
                 mountPath: "/etc/.aws"
