MGMT-20464: Fix NFD detection of NVIDIA GPUs
When we introduced the support for the AMD GPU operator we changed the
configuration of the NFD operator so that it detects the AMD GPUs and
labels the nodes accordingly. But looks like that custom configuration
disables completely the default behaviour, and therefore it no longer
detects NVIDIA GPUs. To avoid that this patch introduces an additional
empty custom configuration, with should fix the issue.

Related: https://issues.redhat.com/browse/MGMT-20464
Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/internal/operators/nodefeaturediscovery/templates/custom/nodefeaturediscovery.yaml
+++ b/internal/operators/nodefeaturediscovery/templates/custom/nodefeaturediscovery.yaml
@@ -26,6 +26,7 @@ spec:
           - "vendor"
           - "device"
         custom:
+        - name: nvidia-gpu
         - name: amd-gpu
           labels:
             feature.node.kubernetes.io/amd-gpu: "true"
