--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,103 @@
 {
-    "schedule": ["on Saturday"],
-    "groupName": "Konflux build pipeline",
-    "includePaths": [".tekton/*"],
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+
+
     "commitMessagePrefix": "NO-ISSUE: ",
-    "labels": ["lgtm", "approved", "konflux"]
+    "labels": ["lgtm", "approved"],
+
+    "prHourlyLimit": 0,
+    "prConcurrentLimit": 0,
+
+    "enabledManagers": [
+        "custom.regex",
+        "tekton"
+    ],
+
+    "tekton": {
+        "fileMatch": ["^.tekton/*"]
+    },
+
+    "customManagers": [
+        {
+            "customType": "regex",
+            "fileMatch": [
+                "^ci-images/Dockerfile.lint$",
+                "^Dockerfile.assisted-service-build$"
+            ],
+            "matchStrings": [
+                "RUN curl .*https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- .* (?<currentValue>.*?)\\n"
+            ],
+            "depNameTemplate": "github.com/golangci/golangci-lint",
+            "datasourceTemplate": "go"
+        },
+        {
+            "customType": "regex",
+            "fileMatch": ["^Dockerfile.assisted-service$"],
+            "matchStrings": [
+                "FROM registry.access.redhat.com/ubi\\${RHEL_VERSION}/go-toolset:(?<currentValue>.*?) AS golang\\n"
+            ],
+            "depNameTemplate": "registry.access.redhat.com/ubi9/go-toolset",
+            "datasourceTemplate": "docker"
+        },
+        {
+            "customType": "regex",
+            "fileMatch": [
+                "^ci-images/Dockerfile.base$",
+                "^Dockerfile.assisted-service-build$",
+                "^Dockerfile.assisted-service-debug$",
+                "^Dockerfile.assisted-service-rhel9-mce$"
+            ],
+            "matchStrings": [
+                "FROM registry.access.redhat.com/ubi9/go-toolset:(?<currentValue>.*?) AS golang\\n",
+                "FROM --platform=\\$BUILDPLATFORM registry.access.redhat.com/ubi9/go-toolset:(?<currentValue>.*?) AS builder\\n"
+            ],
+            "depNameTemplate": "registry.access.redhat.com/ubi9/go-toolset",
+            "datasourceTemplate": "docker"
+        },
+        {
+            "customType": "regex",
+            "fileMatch": [
+                "^Dockerfile.assisted-service-rhel8-mce$"
+            ],
+            "matchStrings": [
+                "FROM --platform=\\$BUILDPLATFORM registry.access.redhat.com/ubi8/go-toolset:(?<currentValue>.*?) AS builder\\n"
+            ],
+            "depNameTemplate": "registry.access.redhat.com/ubi8/go-toolset",
+            "datasourceTemplate": "docker"
+        }
+    ],
+
+    "packageRules": [
+        {
+            "groupName": "Go Builder",
+            "addLabels": ["golang"],
+            "matchDatasources": ["docker"],
+            "matchPackageNames": ["registry.access.redhat.com/ubi8/go-toolset", "registry.access.redhat.com/ubi9/go-toolset"],
+            "allowedVersions": "/^[0-9]+\\.[0-9]+$/"
+        },
+        {
+            "matchUpdateTypes": ["major"],
+            "matchDatasources": ["docker"],
+            "matchPackageNames": ["registry.access.redhat.com/ubi8/go-toolset", "registry.access.redhat.com/ubi9/go-toolset"],
+            "enabled": false
+        },
+        {
+            "groupName": "Linter",
+            "addLabels": ["linter"],
+            "matchDatasources": ["go"],
+            "matchPackageNames": ["github.com/golangci/golangci-lint"]
+        },
+        {
+            "matchUpdateTypes": ["major"],
+            "matchDatasources": ["go"],
+            "matchPackageNames": ["github.com/golangci/golangci-lint"],
+            "enabled": false
+        },
+        {
+            "groupName": "Konflux build pipeline",
+            "addLabels": ["konflux"],
+            "schedule": ["on Saturday"],
+            "matchManagers": ["tekton"]
+        }
+    ]
 }
