--- a/data/default_release_images.json
+++ b/data/default_release_images.json
@@ -182,8 +182,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.39-x86_64",
-        "version": "4.16.39"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.40-x86_64",
+        "version": "4.16.40"
     },
     {
         "openshift_version": "4.16",
@@ -191,8 +191,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.39-aarch64",
-        "version": "4.16.39"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.40-aarch64",
+        "version": "4.16.40"
     },
     {
         "openshift_version": "4.16-multi",
@@ -203,8 +203,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.39-multi",
-        "version": "4.16.39-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.40-multi",
+        "version": "4.16.40-multi"
     },
     {
         "openshift_version": "4.17",
@@ -212,8 +212,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.28-x86_64",
-        "version": "4.17.28"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.29-x86_64",
+        "version": "4.17.29"
     },
     {
         "openshift_version": "4.17",
@@ -221,8 +221,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.28-aarch64",
-        "version": "4.17.28"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.29-aarch64",
+        "version": "4.17.29"
     },
     {
         "openshift_version": "4.17-multi",
@@ -233,8 +233,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.28-multi",
-        "version": "4.17.28-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.29-multi",
+        "version": "4.17.29-multi"
     },
     {
         "openshift_version": "4.18",
@@ -272,9 +272,9 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-ec.5-x86_64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-rc.0-x86_64",
         "support_level": "beta",
-        "version": "4.19.0-ec.5",
+        "version": "4.19.0-rc.0",
         "default": true
     },
     {
@@ -283,9 +283,9 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-ec.5-aarch64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-rc.0-aarch64",
         "support_level": "beta",
-        "version": "4.19.0-ec.5"
+        "version": "4.19.0-rc.0"
     },
     {
         "openshift_version": "4.19-multi",
@@ -296,8 +296,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-ec.5-multi",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-rc.0-multi",
         "support_level": "beta",
-        "version": "4.19.0-ec.5-multi"
+        "version": "4.19.0-rc.0-multi"
     }
 ]
