--- a/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
+++ b/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
@@ -188,3 +188,19 @@ spec:
     openshiftVersion: '4.19'
     url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.19.0-ec.5/rhcos-4.19.0-ec.5-s390x-live-iso.s390x.iso
     version: 9.6.20250402-0
+  - cpuArchitecture: x86_64
+    openshiftVersion: '4.20'
+    url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/4.20.0-ec.2/rhcos-4.20.0-ec.2-x86_64-live-iso.x86_64.iso
+    version: 9.6.20250513-0
+  - cpuArchitecture: arm64
+    openshiftVersion: '4.20'
+    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/pre-release/4.20.0-ec.2/rhcos-4.20.0-ec.2-aarch64-live-iso.aarch64.iso
+    version: 9.6.20250513-0
+  - cpuArchitecture: ppc64le
+    openshiftVersion: '4.20'
+    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/pre-release/4.20.0-ec.2/rhcos-4.20.0-ec.2-ppc64le-live-iso.ppc64le.iso
+    version: 9.6.20250513-0
+  - cpuArchitecture: s390x
+    openshiftVersion: '4.20'
+    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.20.0-ec.2/rhcos-4.20.0-ec.2-s390x-live-iso.s390x.iso
+    version: 9.6.20250513-0
