--- a/config/crd/resources.yaml
+++ b/config/crd/resources.yaml
@@ -2101,6 +2101,10 @@ spec:
                   - type
                   type: object
                 type: array
+              immutableAnnotations:
+                additionalProperties:
+                  type: string
+                type: object
             type: object
         type: object
     served: true
