--- a/.tekton/assisted-service-rhel9-acm-ds-2-15-pull-request.yaml
+++ b/.tekton/assisted-service-rhel9-acm-ds-2-15-pull-request.yaml
@@ -29,6 +29,9 @@ spec:
   - name: build-platforms
     value:
     - linux/x86_64
+    - linux/arm64
+    - linux/ppc64le
+    - linux/s390x
   - name: dockerfile
     value: Dockerfile.assisted-service-rhel9-mce
   - name: path-context
