OCPEDGE-1931: add arbiter agents counts
When running the agent installer scripts we need to pass in the correct number of arbiter agents to the scripts so we know the number of nodes to wait for with out needing to infer the number of arbiters.

Updated unit test to reflect change.

Signed-off-by: ehila <ehila@redhat.com>

--- a/config/crd/resources.yaml
+++ b/config/crd/resources.yaml
@@ -580,6 +580,12 @@ spec:
                 description: ProvisionRequirements defines configuration for when
                   the installation is ready to be launched automatically.
                 properties:
+                  arbiterAgents:
+                    description: |-
+                      ArbiterAgents is the minimum number of matching approved and ready Agents with the arbiter role
+                      required to launch the install.
+                    minimum: 0
+                    type: integer
                   controlPlaneAgents:
                     description: |-
                       ControlPlaneAgents is the number of matching approved and ready Agents with the control plane role
