--- a/.tekton/assisted-service-saas-main-pull-request.yaml
+++ b/.tekton/assisted-service-saas-main-pull-request.yaml
@@ -512,8 +512,10 @@ spec:
         workspace: workspace
     - name: apply-tags
       params:
-      - name: IMAGE
+      - name: IMAGE_URL
         value: $(tasks.build-container.results.IMAGE_URL)
+      - name: IMAGE_DIGEST
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
       runAfter:
       - build-container
       taskRef:
