--- a/Dockerfile.assisted-service-build
+++ b/Dockerfile.assisted-service-build
@@ -1,7 +1,7 @@
 FROM registry.access.redhat.com/ubi9/go-toolset:1.21 AS golang
 
 RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.0
-RUN go install gotest.tools/gotestsum@latest
+RUN go install gotest.tools/gotestsum@v1.12.2
 
 FROM quay.io/centos/centos:stream9
 
