--- a/data/default_release_images.json
+++ b/data/default_release_images.json
@@ -273,7 +273,6 @@
             "x86_64"
         ],
         "url": "quay.io/openshift-release-dev/ocp-release:4.19.1-x86_64",
-        "support_level": "beta",
         "version": "4.19.1",
         "default": true
     },
@@ -284,7 +283,6 @@
             "arm64"
         ],
         "url": "quay.io/openshift-release-dev/ocp-release:4.19.1-aarch64",
-        "support_level": "beta",
         "version": "4.19.1"
     },
     {
@@ -297,7 +295,39 @@
             "s390x"
         ],
         "url": "quay.io/openshift-release-dev/ocp-release:4.19.1-multi",
-        "support_level": "beta",
         "version": "4.19.1-multi"
+    },
+    {
+        "openshift_version": "4.20",
+        "cpu_architecture": "x86_64",
+        "cpu_architectures": [
+            "x86_64"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-ec.3-x86_64",
+        "support_level": "beta",
+        "version": "4.20.0-ec.3"
+    },
+    {
+        "openshift_version": "4.20",
+        "cpu_architecture": "arm64",
+        "cpu_architectures": [
+            "arm64"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-ec.3-aarch64",
+        "support_level": "beta",
+        "version": "4.20.0-ec.3"
+    },
+    {
+        "openshift_version": "4.20-multi",
+        "cpu_architecture": "multi",
+        "cpu_architectures": [
+            "x86_64",
+            "arm64",
+            "ppc64le",
+            "s390x"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-ec.3-multi",
+        "support_level": "beta",
+        "version": "4.20.0-ec.3-multi"
     }
 ]
